Updated demo_03 to use Liberated Pixel Cup assets.

--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -4,9 +4,48 @@
   <script type="text/javascript" src="demo_03.js" /></script>
   <link rel="stylesheet" type="text/css" href="demo_03.css" />
 </head><body>
+  <div id="content">
 
-    <h1>Gani Debug</h1>
+    <h1>A Quick Note About Licenses</h1>
+
+    <p>
+      The .gani files used in this demo were written by hand from
+      scratch, and are made available to you under both the
+      <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+      <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.
+      This author does not desire to be attributed for this work, but
+      if you use these .gani files with 
+      <a href="http://lpc.opengameart.org">Liberate Pixel Cup</a> 
+      assets, be sure to attribute other authors involed correctly!
+    </p>
+
+    <p>
+      Speaking of which, this demo makes use of assets from the
+      <a href="http://lpc.opengameart.org">Liberated Pixel Cup</a> and
+      are modified versions of the
+      <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>, which are also under both the
+      <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+      <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
+      licenses.
+    </p>
+
+    <p>
+      Goodness!  That was a mouthfull!
+    </p>
+
+    <h1>Sprite Animation Demo</h1>
+
+    <p>
+      The Mondaux Graphics and Recreation Library is able to import
+      .gani files and use them to facilitate keyframe animations.
+      While it is not demonstrated in this demo, the playback of sound
+      effects feature of .gani files is supported by MGRL.
+    </p>
+
+    <p>
+      Refresh the page to see the sprites facing different directions.
+    </p>
 
     <div id="page"></div>
-    
+  </div>
 </body></html>
