--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -39,11 +39,19 @@
       The Mondaux Graphics and Recreation Library is able to import
       .gani files and use them to facilitate keyframe animations.
       While it is not demonstrated in this demo, the playback of sound
-      effects feature of .gani files is supported by MGRL.
+      effects feature of .gani files is supported by MGRL.  The brief
+      flash of red circles is the placeholder graphic that shows in
+      place of undownloaded sprites.  This allows the download of a
+      new sprite to not interrupt the playback of the animation.
+      Sprites can be pre-cached to avoid this.
     </p>
 
     <p>
-      Refresh the page to see the sprites facing different directions.
+      Further reading about .gani files:
+      <a href="http://www.graal.net/index.php/Creation/Dev/Gani/Tutorial">tutorial</a>,
+      <a href="http://www.graal.net/index.php/Creation/Dev/Gani">gani faq</a>.
+      This author plans on writing a free software gani editor and
+      does not endorse the use of proprietary software.
     </p>
 
     <div id="page"></div>
