Updated demo 02 to make it a bit flashier.

--- a/demos/02_keyboard_controls/index.html
+++ b/demos/02_keyboard_controls/index.html
@@ -2,6 +2,7 @@
 <html><head>
   <script type="text/javascript" src="../../mgrl.js"></script>
   <script type="text/javascript" src="demo_02.js" /></script>
+  <link rel="stylesheet" type="text/css" href="animations.css" />
   <link rel="stylesheet" type="text/css" href="demo_02.css" />
 </head><body>
   <h1>Mondaux Debug</h1>
