Issue #3 rethemed demo 01

--- a/demos/01_asset_management/index.html
+++ b/demos/01_asset_management/index.html
@@ -1,9 +1,22 @@
 <!doctype html>
 <html><head>
+  <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <link rel="stylesheet" type="text/css" href="demo_01.css" />
   <script type="text/javascript" src="../../mgrl.js" ></script>
   <script type="text/javascript" src="demo_01.js" ></script>
+  <style type="text/css">
+   #headline {
+     background-color: #8fb41e!important;
+   }
+   #page {
+     width: 850px!important;
+   }
+  </style>
+
 </head><body>
-  <h1 id="topper" >Demo 01 : Media</h1>
-  <div id="page"></div>
+  <div id="page">
+    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1 id="headline">01 Asset Management</h1>
+    <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
+  </div>
 </body></html>
