Issue #3 rethemed demos 02 and 03

--- a/demos/02_keyboard_controls/index.html
+++ b/demos/02_keyboard_controls/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html><head>
+  <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <script type="text/javascript" src="../../mgrl.js"></script>
   <script type="text/javascript" src="demo_02.js" /></script>
   <link rel="stylesheet" type="text/css" href="animations.css" />
   <link rel="stylesheet" type="text/css" href="demo_02.css" />
-</head><body>
-  <h1>Mondaux Debug</h1>
+  <style type="text/css">
+   #headline {
+     background-color: #bb490b!important;
+   }
+  </style>
 
-  <div id="demo">
+</head><body>
+  <div id="page">
+    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1 id="headline">02 Keyboard Control for Games</h1>
+    <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
+
+
     <div id="controls">
       <div id="directional_keys">
         <div id="up" class="indicator idle">W</div>
