--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -1,39 +1,23 @@
 <!DOCTYPE html>
 <html><head>
+  <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <script type="text/javascript" src="../../mgrl.js"></script>
   <script type="text/javascript" src="demo_03.js" /></script>
   <link rel="stylesheet" type="text/css" href="demo_03.css" />
+  <style type="text/css">
+   #headline {
+     background-color: #2d98dc!important;
+   }
+   #fine_print {
+     position: relative!important;
+   }
+  </style>
+
 </head><body>
-  <div id="content">
-
-    <h1>A Quick Note About Licenses</h1>
-
-    <p>
-      The .gani files used in this demo were written by hand from
-      scratch, and are made available to you under both the
-      <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
-      <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.
-      This author does not desire to be attributed for this work, but
-      if you use these .gani files with 
-      <a href="http://lpc.opengameart.org">Liberate Pixel Cup</a> 
-      assets, be sure to attribute other authors involed correctly!
-    </p>
-
-    <p>
-      Speaking of which, this demo makes use of assets from the
-      <a href="http://lpc.opengameart.org">Liberated Pixel Cup</a> and
-      are modified versions of the
-      <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>, which are also under both the
-      <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
-      <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
-      licenses.
-    </p>
-
-    <p>
-      Goodness!  That was a mouthfull!
-    </p>
-
-    <h1>Sprite Animation Demo</h1>
+  <div id="page">
+    <h1>Mondaux Graphics & Recreation Library</h1>
+    <h1 id="headline">03 Sprite Animation System</h1>
+    <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
     <p>
       The Mondaux Graphics and Recreation Library is able to import
@@ -54,6 +38,37 @@
       does not endorse the use of proprietary software.
     </p>
 
-    <div id="page"></div>
+
+    <div id="animations"></div>
+    <div id="console"></div>
+
+
+    <div id="fine_print">
+      <strong>A Quick Note About Licenses</strong>
+      <p>
+        The .gani files used in this demo were written by hand from
+        scratch, and are made available to you under both the
+        <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+        <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>.
+        This author does not desire to be attributed for this work, but
+        if you use these .gani files with 
+        <a href="http://lpc.opengameart.org">Liberate Pixel Cup</a> 
+        assets, be sure to attribute other authors involed correctly!
+      </p>
+
+      <p>
+        Speaking of which, this demo makes use of assets from the
+        <a href="http://lpc.opengameart.org">Liberated Pixel Cup</a> and
+        are modified versions of the
+        <a href="https://github.com/jrconway3/Universal-LPC-spritesheet">Universal LPC spritesheet</a>, which are also under both the
+        <a href="http://www.gnu.org/licenses/gpl-3.0.html">GPLv3</a> and
+        <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC BY-SA 3.0</a>
+        licenses.
+      </p>
+
+      <p>
+        Goodness!  That was a mouthfull!
+      </p>
+    </div>
   </div>
 </body></html>
