--- a/demos/01_asset_management/index.html
+++ b/demos/01_asset_management/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="demo_01.js" ></script>
   <style type="text/css">
    #headline {
-     background-color: #8fb41e!important;
+     background-color: #2d98dc!important;
    }
    #page {
      width: 850px!important;
