--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="demo_03.css" />
   <style type="text/css">
    #headline {
-     background-color: #2d98dc!important;
+     background-color: #8fb41e!important;
    }
    #fine_print {
      position: relative!important;
