Bug fixes, added new animations.

--- a/demos/03_animations/index.html
+++ b/demos/03_animations/index.html
@@ -38,6 +38,14 @@
       does not endorse the use of proprietary software.
     </p>
 
+    <p>
+      If you're still confused, right-click on one of the animations
+      below, and select "view background image".  This will show
+      whichever sprite sheet instead of an animated gif.  Also, you
+      can look at the links below the animations to see all of the
+      files loaded up by the animation system.
+    </p>
+
 
     <div id="animations"></div>
     <div id="console"></div>
