Added demo 04 to the demo index.

--- a/demos/index.html
+++ b/demos/index.html
@@ -40,6 +40,10 @@
         <span class="num">03</span>
         <a href="03_animations/">Sprite Animation</a>
       </div>
+      <div>
+        <span class="num">04</span>
+        <a href="04_interactivity/">Walk-Around Demo</a>
+      </div>
     </div>
     
 
