hacktastic demo 04, implemented

--- a/demos/04_interactivity/index.html
+++ b/demos/04_interactivity/index.html
@@ -25,5 +25,16 @@
       <div id="backdrop" class="layer"></div>
     </div>
 
+    <div class="instructions">
+      <h2>Instructions</h2>
+      <ul>
+        <li>WASD are the movement keys.</li>
+        <li>
+          Add "<a href="#dvorak">#dvorak"</a> to the end of the url
+          to enable dvorak mode.
+        </li>
+      </ul>
+    </div>
+
   </div>
 </body></html>
