Issue #8 animiations are now scheduled in batches.

--- a/demos/04_interactivity/index.html
+++ b/demos/04_interactivity/index.html
@@ -19,6 +19,7 @@
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
     <div id="game" class="loading">
+      <div id="fps_counter"><span id="fps">???</span> frames per second</div>
       <div id="overhang" class="layer"></div>
       <div id="chars" class="layer">
       </div>
