began implementing webgl support and glsl abstraction

--- a/demos/05_webgl/index.html
+++ b/demos/05_webgl/index.html
@@ -10,8 +10,7 @@
    }
    
    canvas#gl {
-     color: #980000;
-     background-color: #666;
+     background-color: #ccc;
    }
   </style>
 </head><body>
