implementing glsl handler

--- a/demos/05_webgl/index.html
+++ b/demos/05_webgl/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html><head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <link rel="stylesheet" type="text/css" href="demo_01.css" />
   <script type="text/javascript" src="../../mgrl.js" ></script>
@@ -9,7 +10,7 @@
      background-color: #980000!important;
    }
    
-   canvas#gl {
+   canvas#gl_canvas {
      background-color: #ccc;
    }
   </style>
@@ -19,7 +20,7 @@
     <h1 id="headline">05 WebGL Framework</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
     
-    <canvas id="gl" width=800 height=600>
+    <canvas id="gl_canvas" width=800 height=600>
       Your browser does not appear to support HTML5 canvas and/or webgl.
     </canvas>
   </div>
