helper functions for uniforms, building out demo

--- a/demos/05_webgl/index.html
+++ b/demos/05_webgl/index.html
@@ -3,8 +3,9 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <link rel="stylesheet" type="text/css" href="demo_01.css" />
-  <script type="text/javascript" src="../../mgrl.js" ></script>
-  <script type="text/javascript" src="demo_05.js" ></script>
+  <script type="text/javascript" src="../gl-matrix.js"></script>
+  <script type="text/javascript" src="../../mgrl.js"></script>
+  <script type="text/javascript" src="demo_05.js"></script>
   <style type="text/css">
    #headline {
      background-color: #980000!important;
