--- a/demos/index.html
+++ b/demos/index.html
@@ -46,7 +46,7 @@
       </div>
       <div>
         <span class="num">05</span>
-        <a href="05_webgl/">WebGL Framework</a>
+        <a href="05_webgl/">GLSL Abstraction</a>
       </div>
     </div>
     
