--- a/demos/index.html
+++ b/demos/index.html
@@ -8,7 +8,8 @@
    #linkset {
      font-size: 32px;
      display: table;
-     width: 100%;
+     width: 95%;
+     margin: auto;
    }
    .links {
      display: table-cell;
