added a new demo file

--- a/demos/index.html
+++ b/demos/index.html
@@ -87,7 +87,7 @@
         </div>
         <div>
           <span class="num">06</span>
-          <a>3D Assets</a>
+          <a href="06_models">3D Assets</a>
         </div>
         <div>
           <span class="num">07</span>
