--- a/demos/06_models/index.html
+++ b/demos/06_models/index.html
@@ -12,6 +12,9 @@
    
    canvas#gl_canvas {
      background-color: #ccc;
+     margin-left: -20px;
+     margin-right: -20px;
+     width: 840px;
    }
   </style>
 </head><body>
@@ -20,7 +23,7 @@
     <h1 id="headline">06 Models, Textures, Etc</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
     
-    <canvas id="gl_canvas" width=800 height=600>
+    <canvas id="gl_canvas" width=840 height=630>
       Your browser does not appear to support HTML5 canvas and/or webgl.
     </canvas>
   </div>
