--- a/demos/06_models/index.html
+++ b/demos/06_models/index.html
@@ -11,10 +11,9 @@
    }
    
    canvas#gl_canvas {
-     background-color: #ccc;
      margin-left: -20px;
      margin-right: -20px;
-     width: 840px;
+     margin-bottom: -20px;
    }
   </style>
 </head><body>
