fixed specular bug in demo 06, moved common assets into gl_assets

--- a/demos/index.html
+++ b/demos/index.html
@@ -91,7 +91,7 @@
         </div>
         <div>
           <span class="num">07</span>
-          <a>Postprocessing</a>
+          <a href="07_multipass">Post Processing</a>
         </div>
         <!--
         <div>
