modified demo 06 to have a cool looking floor thing

--- a/demos/06_models/index.html
+++ b/demos/06_models/index.html
@@ -13,7 +13,8 @@
    canvas#gl_canvas {
      margin-left: -20px;
      margin-right: -20px;
-     margin-bottom: -20px;
+     margin-bottom: -25px;
+     border-radius: 3px;
    }
   </style>
 </head><body>
