--- a/demos/06_models/index.html
+++ b/demos/06_models/index.html
@@ -29,7 +29,7 @@
      left: 0px;
      right: 0px;
      text-align: center;
-     font-size: 40px;
+     font-size: 20px;
    }
 
    #progress {
@@ -39,7 +39,6 @@
      margin-top: 10px;
      width: 500px;
      height: 25px;
-     font-size: 20px;
      line-height: 25px;
      border: 1px dashed #444;
    }
@@ -52,6 +51,11 @@
      background-color: #d8d8d8;
      border: 1px solid #444;
      border-right: 1px dotted #444;
+   }
+
+   #progress_info {
+     margin-top: 1em;
+     font-size: 18px;
    }
 
    #percent {
@@ -78,6 +82,7 @@
           <div id="progress_bar" style="width:0%;"></div>
           <div id="percent">unknown %</div>
         </div>
+        <div id="progress_info"></div>
       </div>
     </div>
     
