--- a/demos/07_multipass/index.html
+++ b/demos/07_multipass/index.html
@@ -54,6 +54,11 @@
      border-right: 1px dotted #444;
    }
 
+   #progress_info {
+     margin-top: 1em;
+     font-size: 18px;
+   }
+
    #percent {
      position: absolute;
      top: 0px;
@@ -78,6 +83,7 @@
           <div id="progress_bar" style="width:0%;"></div>
           <div id="percent">unknown %</div>
         </div>
+        <div id="progress_info"></div>
       </div>
     </div>
     
