added keyboard control to demo 07

--- a/demos/07_multipass/index.html
+++ b/demos/07_multipass/index.html
@@ -70,6 +70,12 @@
    canvas#gl_canvas {
      display: none;
    }
+
+   #other_info {
+     color: black;
+     text-align: center;
+     margin-top: 1em;
+   }
   </style>
 </head><body>
   <div id="page">
@@ -91,4 +97,9 @@
       Your browser does not appear to support HTML5 canvas and/or webgl.
     </canvas>
   </div>
+
+  <div id="other_info">
+    Press the arrow keys to move the camera.
+  </div>
+
 </body></html>
