updated demo index

--- a/demos/index.html
+++ b/demos/index.html
@@ -93,6 +93,10 @@
           <span class="num">07</span>
           <a href="07_multipass">Post Processing</a>
         </div>
+        <div>
+          <span class="num">&@a?</span>
+          <a href="gavroche_hall">jta debug</a>
+        </div>
         <!--
         <div>
           <span class="num">08</span>
