#28 - reworked fps counter code moved the code from m.ani.js to m.multipass.js, and made it use dom events to trigger when new information is available for display

--- a/demos/gavroche_hall/index.html
+++ b/demos/gavroche_hall/index.html
@@ -75,6 +75,7 @@
     <h1>Mondaux Graphics & Recreation Library</h1>
     <h1 id="headline">Gavroche Hall</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
+    <div id="fps_counter"><span id="fps">???</span> frames per second</div>
 
     <div id="loading_screen" class="demo_area">
       <div id="loading_box">
