#28 - removed please.media.connect_onload() functionality and updated demos

--- a/demos/02_keyboard_controls/index.html
+++ b/demos/02_keyboard_controls/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html><head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <script type="text/javascript" src="../../mgrl.js"></script>
   <script type="text/javascript" src="demo_02.js" /></script>
