--- a/demos/index.html
+++ b/demos/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html><head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="demo_common.css" />
   <style type="text/css">
    #headline {
