--- a/demos/01_asset_management/index.html
+++ b/demos/01_asset_management/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html><head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../demo_common.css" />
   <link rel="stylesheet" type="text/css" href="demo_01.css" />
   <script type="text/javascript" src="../../mgrl.js" ></script>
