--- a/demos/gavroche_hall/index.html
+++ b/demos/gavroche_hall/index.html
@@ -98,7 +98,7 @@
     <h1 id="headline">Debug Level</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
-    <div id="halp">Press the arrow keys to soar magestically through the air!</div>
+    <div id="halp">Press the arrow keys to soar majestically through the air!</div>
 
     <div id="loading_screen" class="game_screen">
       <div id="loading_box">
