#29 - corrected the license comment header in the demos and adjusted the msg on the demo index page

--- a/demos/index.html
+++ b/demos/index.html
@@ -109,12 +109,13 @@
 
     <div id="fine_print">
       <p>
-        Because we're all in this together, MGRL's codebase is
-        dedicated to the public domain by way of
+        M.GRL is made available to you as free software under the terms of
+        the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>.
+      </p>
+      <p>
+        The javascript portion of the demos listed on this page have
+        been dedicated to the public domain by way of
         <a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0</a>.
-        You are free to do what you will with this code - no judgement
-        will be passed upon you.  However, THIS DOES NOT INCLUDE THE
-        ART!
       </p>
       <p>
         Some of the demos make use of art assets either from the 
