#29 added automatic attribution for 3D model files in gavroche hall demo

--- a/demos/gavroche_hall/index.html
+++ b/demos/gavroche_hall/index.html
@@ -10,6 +10,42 @@
      background-color: #550b67!important;
    }
 
+   #attribution_area {
+     display: none;
+     position: relative;
+     width: 820px;
+     margin: auto;
+     margin-top: 1em;
+     padding: 10px;
+     border-radius: 3px;
+     background-color: #eee;
+     margin-bottom: 1em;
+   }
+   
+   .mgrl_asset_license {
+     position: relative;
+     padding: 10px;
+     with: 710px;
+     margin-left: 90px;
+   }
+
+   .mgrl_asset_license > a:first-child {
+     position: absolute;
+     display: block;
+     width: 80px;
+     left: -80px;
+     top: 50%;
+     margin-top: -7px;
+   }
+
+   .mgrl_asset_license > div {
+     font-size: 12px;
+   }
+
+   .mgrl_asset_license .derived_work {
+     display: block;
+   }
+
    .game_screen {
      width: 840px;
      height: 630px;
@@ -116,5 +152,8 @@
         Your browser does not appear to support HTML5 canvas and/or webgl.
       </canvas>
     </div>
+  </div>
+
+  <div id="attribution_area">
   </div>
 </body></html>
