#29 - updated wording to say LPGLv3 /or later/

--- a/demos/index.html
+++ b/demos/index.html
@@ -110,7 +110,8 @@
     <div id="fine_print">
       <p>
         M.GRL is made available to you as free software under the terms of
-        the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>.
+        the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a> or
+        later.
       </p>
       <p>
         The javascript portion of the demos listed on this page have
