#29 - updated wording to say LPGLv3 /or later/

--- a/demos/index.html
+++ b/demos/index.html
@@ -110,8 +110,9 @@
     <div id="fine_print">
       <p>
         M.GRL is made available to you as free software under the terms of
-        the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a> or
-        later.
+        the <a href="https://www.gnu.org/licenses/lgpl-3.0.txt">LGPLv3</a>
+        or, at your option, any later version of the LGPL as published
+        by the Free Software Foundation.
       </p>
       <p>
         The javascript portion of the demos listed on this page have
