--- a/tests/index.html
+++ b/tests/index.html
@@ -10,9 +10,11 @@
   <script src="jasmine/lib/jasmine-2.1.3/jasmine-html.js"></script>
   <script src="jasmine/lib/jasmine-2.1.3/boot.js"></script>
 
+  <!-- dependencies & m.grl -->
   <script src="../demos/gl-matrix.js"></script>
   <script src="../mgrl.js"></script>
 
-  <script src="spec/isthisthingon.js"></script>
+  <!-- tests for m.grl -->
+  <script src="spec/m.graph.tests.js"></script>
 
 </head><body></body></html>
