please.once now removes callback if it was an event handler frrom being an event handler, where applicable

--- a/tests/index.html
+++ b/tests/index.html
@@ -15,6 +15,7 @@
   <script src="../mgrl.js"></script>
 
   <!-- tests for m.grl -->
+  <script src="spec/m.defs.tests.js"></script>
   <script src="spec/m.graph.tests.js"></script>
 
 </head><body></body></html>
