#58 picking demo contains desired functionality

--- a/demos/bezier_pick/index.html
+++ b/demos/bezier_pick/index.html
@@ -17,6 +17,8 @@
     <h1 id="headline">Picky Bezier</h1>
     <div id="back_button">[ <a href="../">back to demo index</a> ]</div>
 
+    <div id="halp">Click and drag the red markers!</div>
+
     <div id="loading_screen" class="game_screen">
       <div id="loading_box">
         <div id="progress">
