Updated the demo index

--- a/demos/index.html
+++ b/demos/index.html
@@ -88,22 +88,20 @@
         </div>
         <div>
           <span class="num">06</span>
-          <a href="06_models">3D Assets</a>
+          <a href="06_models/">3D Assets</a>
         </div>
         <div>
           <span class="num">07</span>
-          <a href="07_multipass">Post Processing</a>
+          <a href="07_multipass/">Post Processing</a>
         </div>
         <div>
           <span class="num">&@a?</span>
-          <a href="gavroche_hall">jta debug</a>
+          <a href="gavroche_hall/">JTA Debug</a>
         </div>
-        <!--
         <div>
-          <span class="num">08</span>
-          <a></a>
+          <span class="num">✭❎</span>
+          <a href="bezier_pick/">Bezier Curves</a>
         </div>
-        -->
       </div>
     </div>
 
